# daily_music

./: .gitignore  README.md  daily_extract.bat
airflow/: README.md  docker-compose.yaml  docker_compose.yaml
airflow/dags/: dag_with_python.py  dag_with_taskflow_api.py  daily_music_extract.py  first_dag.py
daily_music_python/: pyproject.toml  requirements.txt  setup.cfg
daily_music_python/python_logger/src/: Logger.py
daily_music_python/spotify_bot/src/: SpotifyConnection.py
daily_music_python/src.egg-info/: PKG-INFO  SOURCES.txt
daily_music_python/src/email_service/: email_app.py  email_template_1.html
daily_music_python/src/helpers/: email_helper.py  slack_helper.py  spotify_helper.py  string_helper.py
daily_music_python/src/python_logger/: Logger.py
daily_music_python/src/slack_bot/: bot.py  bot_event.py
daily_music_python/src/snowflake_functions/: SnowflakeCredentials.py  cred.ini  snowflake_functions.py
daily_music_python/src/spotify_bot/: SpotifyConnection.py  spotify_app.py
