[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
authors = [
  { name="Alba Nemeth-Buhin", email="buhina@starschema.net" },
  { name="Gaor Tar", email="targ@starschema.net" },
]
description = "Package for finishing project for our Data Engineer Academy"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/targabor/daily_music"
"Bug Tracker" = "https://github.com/targabor/daily_music/issues"